--- a/package.json
+++ b/package.json
@@ -24,14 +24,26 @@
     "mocha": "9.2.0",
     "mysql2": "2.3.3",
     "nyc": "15.1.0",
-    "sequelize": "6.25.5",
+    "sequelize": "^6.25.5",
     "sequelize-cli": "6.4.1"
   },
   "dependencies": {
     "camelcase": "6.3.0",
+    "dotenv": "^16.3.1",
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "8.5.1",
+    "mysql": "^2.18.1",
     "puppeteer": "13.2.0",
     "uuid": "8.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tryber/sd-028-a-trybe-futebol-clube.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tryber/sd-028-a-trybe-futebol-clube/issues"
+  },
+  "homepage": "https://github.com/tryber/sd-028-a-trybe-futebol-clube#readme"
 }
