--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -52,12 +52,13 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "jest": "27.4.3",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.3.3",
     "sequelize": "6.25.5"
   }
