--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   },
   "dependencies": {
     "camelcase": "6.3.0",
-    "dotenv": "^16.3.1",
     "http-status-codes": "2.2.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "puppeteer": "13.2.0",
     "uuid": "8.3.2"
