--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -35,7 +35,7 @@
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
     "chai": "4.3.6",
-    "chai-http": "4.3.0",
+    "chai-http": "^4.3.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "15.0.0",
